tests/typing/bad/testfile-type-undefined-1.jl
struct name
	field :: type_undefined
end
